# WHW-13

./: docker-compose.yml  pyproject.toml  readme.md
WHW13last/: main.py
WHW13last/migrations/versions/: 504a98ed1f36_add_to_model_account_column_confirmed.py  6985c86cf9c7_new.py  72babccaac2f_add_acc.py  956026a84877_add_new.py  b78e13694580_add_role_of_user.py  f41745779258_add_user.py
WHW13last/src/conf/: config.py
WHW13last/src/database/: db.py  models.py
WHW13last/src/repository/: users.py
WHW13last/src/routes/: auth.py  users.py
WHW13last/src/services/: auth.py  email.py  roles.py
WHW13last/src/services/templates/: email_template.html
migrations/: env.py
migrations/versions/: 4bb18d0411ea_new_api.py  83b17a32f0c2_add_columns_completed.py  a36e8614002f_remove_unique_title.py
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py
src/repository/: acc.py
src/services/: auth.py  email.py
